# image-snip

./: .gitignore  Justfile  LICENSE  Pipfile  README.md  crop-to-jpg.py  crop_to_jpg.py  crop_to_jpg_test.py  dev-requirements.txt  image_snip.py  image_snip_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
image_snip/: __init__.py
tests/: test_image_snip.py
